syntax = "proto3";
option java_package = "org.example.grpc";
import "basics.proto";
import "agency_entities.proto";
import "hotel_entities.proto";

service AgencyService {
  rpc getAgencyById(IntegerId) returns (Agency);
  rpc getAllHotels(EmptyMessage) returns (ManyHotel);
  rpc searchRoom(SearchRoomMessage) returns (ManyHotel);
  rpc makeReservation(Reservation) returns (Reservation);
}
